# sample-plugin-nautobot

./: manage.py  pyproject.toml
devices/: views.py
samplePluginNautobot/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
