[tool.poetry]
name = "simple-plugin-nautobot"
version = "0.1.0"
description = "first plugin for nautbot"
authors = ["Iran Alyf <iranalyf2222@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_plugin_nautobot"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
